--- a/src/components/aboutMe/achievements.scss
+++ b/src/components/aboutMe/achievements.scss
@@ -100,3 +100,70 @@ img{
 	opacity: 1;
 	transform: translateY(0px);
 }
+
+
+
+// *,*:after,*:before{
+// 	-webkit-box-sizing: border-box;
+// 	-moz-box-sizing: border-box;
+// 	-ms-box-sizing: border-box;
+// 	box-sizing: border-box;
+// }
+// body{
+// 	font-family: arial;
+// 	font-size: 16px;
+// 	margin:0;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: space-around;
+// 	min-height: 100vh;
+// }
+// img{
+// 	max-width: 100%;
+// }
+// .ui-card{
+//     width: 500px;
+//     height: 500px;
+// 	position: relative;
+// 	overflow: hidden;
+// 	transition: all 0.3s ease-out;
+//     background:radial-gradient(#111 50%, #000 100%);
+//     border: 2px solid black;
+// }
+
+// .img{
+// 	transform: scale(1.3);
+//     transition: all 0.3s ease-out;
+// }
+// .img:hover {
+// 	transform: scale(1.1) translateY(-20px); 
+// 	opacity: 0.3
+// }
+// .description{
+// 	position: absolute;
+// 	bottom: 0;
+// 	left: 0;
+// 	padding: 15px;
+// 	width: 100%;
+// 	text-align: center;
+// 	color: #fff;
+// 	font-size: 18px;
+// }
+
+
+// .description a{
+// 	color: #fff;
+// 	background:#34aff3;
+// 	display: inline-block;
+// 	padding: 10px 25px;
+// 	border-radius: 5px;
+// 	text-decoration: none;
+// 	transform: translateY(30px);
+// 	opacity: 0;
+// 	transition: all 0.3s ease-out 0.4s;
+// }
+// .description a:hover{
+// 	background:#0a83c5;
+// }
+
+
