--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,69 +1,3 @@
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-  }
-  
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
   .active, .dot:hover {
     background-color: #717171;
   }
@@ -75,6 +9,58 @@
     // animation-name: fade;
     // animation-duration: 1s;
   }
+
+
+  
+  
+  .bharat_kumar{
+    font-size: 3.5vh;
+    font-weight: 600;
+  }
+
+  .mbbs{
+    font-size: 2vh;
+    font-weight: 600;
+  }
+
+  .read{
+    font-size: 2vh;
+  }
+
+  .headings{
+    font-family: "Comfortaa";
+    color: "black";
+    align-content: center;
+    font-size: 6vh;
+  }
+
+  .subscribe{
+    font-size: 4vh,
+  }
+
+  .submit{
+    font-size: 2vh;
+  }
+
+  .item{
+    width:100%;
+    height:auto;
+  }
+
+  .names{
+    font-size: 2.5vh;
+  }
+
+  .doc_des{
+    font-size: 1.5vw;
+    margin-left: 80px;
+  }
+
+  .write_up{
+    font-size: 1vw;
+  }
+
+  
   
   @-webkit-keyframes fade {
     from {opacity: .4} 
@@ -87,11 +73,134 @@
   }
   
   /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
+  
+  
+  // @media only screen and (max-width: 500px) {
+
+  // }
+
+  @media only screen and (max-width:1200px) {
+    // .slides{
+    //   max-width: "100%";
+    //   flex-basis: "100%";
+    // }
   }
 
-  .carousal-main-caption{
-    padding-top: "200px";
-    font-size: "22px";
+  @media only screen and (max-width:1200px) {
+    #myCarousel{
+      width:"500px"
+    }
+
+    .bharat_kumar{
+      font-size: 2.5vh;
+      font-weight: 600;
+    }
+
+    .mbbs{
+      font-size: 1.5vh;
+      font-weight: 600;
+    }
+
+    .read{
+      font-size: 2vh;
+      font-weight: 600;
+    }
+
+    .headings{
+      font-size: 5vh;
+    }
+
+    .subscribe{
+      font-size: 3.5vh,
+    }
+
+    .submit{
+      font-size: 1.5vh;
+    }
+
+    .item{
+      width:'500px'
+    }
+
+    .names{
+      font-size: 2vh;
+    }
+
+    .doc_des{
+      font-size: 1.8vh;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .write_up{
+      font-size: 1.5vw;
+    }
+
+   
+  }
+
+
+  @media only screen and (max-width: 1200px) and (min-width: 550px){
+    .MuiGrid-grid-sm-2{
+      max-width: 30% !important; 
+      flex-basis: 30% !important;
+    }
+
+    .MuiGrid-grid-sm-3{
+      max-width: 5% !important; 
+      flex-basis: 5% !important;
+    }
+  }
+
+  @media only screen and (max-width: 770px) {
+  
+    .bharat_kumar{
+      font-size: 2vh;
+      font-weight: 600;
+    }
+
+    .mbbs{
+      font-size: 1.5vh;
+      font-weight: 600;
+    }
+
+    .read{
+      font-size: 1vh;
+      font-weight: 600;
+    }
+
+    .headings{
+      font-size: 3vh;
+    }
+
+    .subscribe{
+      font-size: 3.5vh,
+    }
+
+    .names{
+      font-size: 1.5vh;
+    }
+
+    .doc_des{
+      font-size: 3vw;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-left: 0;
+    }
+
+    .doc_img{
+      margin:auto;
+    }
+
+    .write_up{
+      font-size: 3vw;
+    }
+
+    .slide{
+      width:100%;
+    }
+
+    // .MuiGrid-grid-sm-2{
+    //   max-width: 30% !important;
+    //   flex-basis: 30% !important;
+    // }
   }
