pushing before deployment

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -60,7 +60,8 @@
     font-size: 1vw;
   }
 
-  
+  .multilinks{
+  }
   
   @-webkit-keyframes fade {
     from {opacity: .4} 
@@ -133,6 +134,10 @@
     }
     .write_up{
       font-size: 1.5vw;
+    }
+
+    .multilinks{
+
     }
 
    
