--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,11 +1,14 @@
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    // position: absolute;
+    background-color: #222;
+    min-width: 11vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
+    padding: 0 0px;
+    padding-left: 0;
+    margin-left: 0;
     z-index: 1;
+    border: 1px solid #9D9D9D
   }
   
   .dropdown:hover .dropdown-content {
@@ -17,6 +20,17 @@
     display: inline-block;
   }
 
+  a.nav_ele {color:#9D9D9D;}   
+          /* Unvisited link  */
+    // a:visited {color:#00FF00;} /* Visited link    */
+    a.nav_ele:hover {color: white;}   /* Mouse over link */
+    // a:active {color:#0000FF;}
+  
+
+    .dropdown-menu{
+      padding-left: 90px;
+    }
+
   @media only screen and (max-width: 770px) {
     .navbar-header{
       height:16vh
@@ -24,5 +38,13 @@
 
     .navbar-toggle{
       margin-top: 6vh;
+    }
+
+    .dropdown-content{
+      width:50vw
+    }
+
+    .dropdown-menu{
+      padding-left: 40px;
     }
   }
