--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -31,6 +31,14 @@
       padding-left: 90px;
     }
 
+  .cap{
+    color:#9D9D9D;
+  }
+
+  .cap:hover{
+    color: white;
+  }
+
   @media only screen and (max-width: 770px) {
     .navbar-header{
       height:16vh
@@ -46,5 +54,9 @@
 
     .dropdown-menu{
       padding-left: 40px;
+    }
+
+    .user_image1{
+      margin-left: 40vw;
     }
   }
