--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -60,6 +60,10 @@
     font-size: 1vw;
   }
 
+  .hi{
+    font-size: 2vw;
+  }
+
   .multilinks{
   }
   
@@ -202,6 +206,14 @@
 
     .slide{
       width:100%;
+    }
+
+    .medifit_class{
+      
+    }
+
+    .hi{
+      font-size: 4vw;
     }
 
     // .MuiGrid-grid-sm-2{
