--- a/src/components/blog/style.scss
+++ b/src/components/blog/style.scss
@@ -68,7 +68,15 @@
     border: none;
     cursor: pointer;
   }
+
+  .dropbtn_reply {
+    margin-left: 67vh;
+  }
   
+  .dropbtn_comment {
+    margin-left: 65vh;
+  }
+
   .dropdown {
     position: relative;
     display: inline-block;
@@ -77,12 +85,23 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: white;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    margin-left: 67vh;
+  }
+
+  .settings_button {
+    border:none;
+     background-color:white;
+      color:black;
+      font-size:15px;
+      font-weight:500;
+      margin-top:0px
   }
   
+ 
   .dropdown-content a {
     color: black;
     padding: 6px 6px;
@@ -98,4 +117,43 @@
   
   .dropdown:hover .dropbtn {
     // background-color: grey;
+  }
+
+  @media only screen and (max-width: 770px) {
+    .user_details{
+        margin-left: 1vh;
+        padding-top: 1vh;
+      }
+
+      .dropbtn_reply {
+        margin-left: 10px;
+      }
+
+      .reply_textfield{
+        margin-left: 10px;
+      }
+
+      .dropdown {
+        position: absolute;
+        margin-left: 10px;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        min-width: 100px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        margin-left: 10px;
+      }
+
+      .settings_button {
+        margin-left: 10px;
+      }
+
+    // .dropdown {
+    //   position: relative;
+    //   display: flex;
+    // }
   }
